--- a/vignettes/test.Rmd
+++ b/vignettes/test.Rmd
@@ -27,8 +27,15 @@ ttest_mverse(mv, x='height', y='nExp')
 ```
 
 ```{r}
-tt <- t.test(soccer$height)
-tt$conf.int[2]
-tt$p.value
+mydf <- data.frame(
+    x=rnorm(100, 0, 2),
+    y=rnorm(100)
+  )
+mv <- create_multiverse(mydf)
+mbranch <- mutate_branch(x + y, x - y, x * y, name = "m")
+mv %>%
+  add_mutate_branch(mbranch)
+ttest_mverse(mv, 'x', 'm')
+
 ```
 
