--- a/vignettes/getting-start.Rmd
+++ b/vignettes/getting-start.Rmd
@@ -69,29 +69,28 @@ knitr::opts_chunk$set(
 
 This simple case-study will introduce the basic work-flow of `mverse`. We will define and execute different branches to analyze the data with multiple "paths".
 
+The typical workflow of multiverse analysis with `mverse` is
+1. Initialize a `multiverse` object.
+2. Define all the decisions as *branches*.
+3. Add defined *branches* into the `multiverse` object.
+4. Run models, hypothesis tests, and plots. 
 
-## Loading packages
+# Loading packages
 ```{r load_package, warning=FALSE, message=FALSE}
 library(mverse)
 ```
 
-## Data
+# Data
 We will use the `hurricane` data [@original]. This dataset has 94 observations on 12 variables. 
 
 ```{r load_data, warning=FALSE, message=FALSE}
 hurricane
 ```
 
-## Initiate a multiverse
-We first create a multiverse object from the dataset. 
-```{r define_mverse}
-mv <- create_multiverse(hurricane)
-```
-
-## Branch
+# Define Branches
 Each branch defines a "decision point". The multiverse then branches out to different "universe", or analysis paths. In `mverse` package, we define branches using `X_branch(...)`, where `...` are expressions that defines reasonable decision choices at that "decision point". 
 
-## Define filter branches
+## Filter branches
 `filter_branch` takes some logical predicates, and finds the observations where the condition is true. 
 
 In the original analysis [@original], the authors excludes outliers based on extreme observations of deaths and damages. In our implementations, we use `filter_branch` to exclude the most extreme hurricanes. 
@@ -112,24 +111,15 @@ damage_outliers <- filter_branch(
   !(Name %in% c('Sandy', 'Andrew', 'Donna'))
 )
 
-# Add these branches to the multiverse 
-mv <- mv %>%
-  add_filter_branch(death_outliers, damage_outliers)
 ```
 
 
-## T-test on multiverses
-``` {r t_test}
-ttest_mverse(mv, 'Gender_MF')
-```
-
-
-## Define mutate branches
+## Mutate branches
 `mutate_branch` takes expressions that modify data columns. 
 
 For defining the femininity of the name, [@original] identify two ways, by a 0-11 point scale or by a binary scale. Also, the other decision is whether to transform the damage. We will use `mutate_branch` to implement such decisions.
 
-```{r define_variables}
+```{r mutate_branch}
 # Define femininity 
 femininity <- mutate_branch(
   Gender_MF, # based on binary gender
@@ -141,93 +131,116 @@ damage <- mutate_branch(
   NDAM, # No transform
   log(NDAM) # log transform
 )
-mv <- mv %>%
-  add_mutate_branch(femininity, damage)
 ```
 
 
 
-## Define model branches
+## Formula branches
 
-`model_branch` takes formulas that 
+`formula_branch` takes formulas and will be used in modeling data or hypotheses tests. 
 
-> `mverse` methods aren't implemented yet
+After inspections on the data, We may propose some linear regression models. For simplicity, we will predict the death numbers using femininity, damage, and wind speed. 
 
-```{r fit_model}
-# wrapper for model branching to be implemented
-multiverse::inside(
-  mv, {
-    fit <- glm(
-      branch(
-        model,
-        'linear' ~ log(death + 1),
-        'poisson' ~ death
-      ) ~ branch(
-        femininity_damage_interaction,
-        'yes' ~ femininity * damage,
-        'no' ~ femininity + damage
-      ) + branch(
-        other_predictors,
-        'pressure' ~ femininity * zmin,
-        'wind' ~ femininity * zwin,
-        'category' ~ femininity * zcat,
-        'all' ~ femininity * z3,
-        'all_no_interaction' ~ z3,
-        'none' ~ NULL
-      ) + branch(
-        covariates,
-        '1' ~ NULL,
-        '2' ~ year:damage,
-        '3' ~ post:damage
-      ), family = branch(
-        model,
-        'linear' ~ gaussian,
-        'poisson' ~ poisson
-      ), data = data
-    )
-    # attach fitted values and standard errors to the original data
-    pred <- predict(fit, se.fit = TRUE, type = "response")
-    disagg_fit <- data %>%
-      mutate(
-        fitted = pred$fit,
-        se.fit = pred$se.fit,
-        df = df.residual(fit),
-        sigma = sigma(fit),
-        se.residual = sqrt(sum(residuals(fit)^2))/ df
-      )
-    pred2expectation <- function(mu, sigma) {
-      branch(model, "linear" ~ exp(mu + sigma^2/2) - 1, "poisson" ~ mu)
-    }
-    expectation <- disagg_fit %>%
-      mutate(expected_deaths = pred2expectation(fitted, sigma)) %>%
-      group_by(female) %>%
-      summarise(mean_deaths = mean(expected_deaths), .groups = "drop_last") %>%
-      compare_levels(mean_deaths, by = female)
-  }
+``` {r formula_branch}
+# Define the formulas 
+formulas <- formula_branch(
+  alldeaths ~ MasFem + damage + HighestWindSpeed, # simplest additive model
+  alldeaths ~ MasFem * damage + HighestWindSpeed, # interactions between femininity and damage
+  alldeaths ~ MasFem * HighestWindSpeed + damage, # interactions between femininity and wind speed
 )
 ```
 
-## Execute and Inspect Results
+## Family branches
+`family_branch` takes `family` functions and will bed used in firing generalized linear regressions.
 
-```{r}
-# execute the multiverse
-mv <- mv %>%
-  execute_multiverse()
+Of course, models is not limited with simple linear regression. For our analysis, we will use linear model and Poisson model. 
+
+``` {r family_branch}
+families <- family_branch(
+  gaussian(),
+  poisson()
+)
 ```
 
-> `mverse` methods aren't implemented yet (will wait until `multiverse::extract_variables` is available in the released version of `multiverse`)
+# Execute multiverse analysis with branches
+After defining all branches, we can execute different modelings or tests. 
 
-```{r extract_results, fig.width=8, fig.height=3, fig.cap="Estimated coefficient of femininity of a hurricane's name."}
-# a wrapper function to be implemented using multiverse::extract_variables
-fem_coefs <- multiverse::extract_variables(mv) %>%
-  mutate(res = map(.results, 'expectation')) %>%
-  unnest(res) %>%
-  rename(universe = .universe)
-fem_coefs %>%
-  arrange(mean_deaths) %>%
-  mutate(index = 1:nrow(.)) %>%
-  ggplot(aes(y = mean_deaths, x = index, color = model)) +
-  geom_point(alpha = 0.1) +
-  xlab('Universe') + ylab('Mean Difference in Expected Deaths') +
-  theme_minimal()
+## T-test on multiverses
+You can run t-tests on the multiverse with `ttest_mverse`, `ttest_mverse` can run one sample t test with one column name as parameter, or two sample t test with two column names. 
+``` {r t_test}
+# Two sample t test
+
+# create mverse object and add relevant branches 
+mv_ttest <- create_multiverse(hurricane) %>% 
+  add_filter_branch(death_outliers, damage_outliers) %>% 
+  add_mutate_branch(femininity, damage)
+
+# Execute t test
+ttest_mverse(mv_ttest, 'MinPressure_before', 'Minpressure_Updated_2014')
 ```
+
+Another usage for `ttest_mverse` is to work with `formula_branch`. The formula need to follow the <a href="https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/t.test">formula interface</a> of `t.test`.
+
+```{r t_test_formula}
+# Two sample t test of min pressure with male hurricane group and female hurricane group
+
+# Define the formula
+ttest_formula <- formula_branch(
+  Minpressure_Updated_2014 ~ Gender_MF
+)
+# Create mverse object and add relevant branches 
+mv_ttest_formula <- create_multiverse(hurricane) %>% 
+  add_filter_branch(death_outliers, damage_outliers) %>% 
+  add_mutate_branch(femininity, damage) %>%
+  add_formula_branch(ttest_formula)
+# Execute t test
+ttest_mverse(mv_ttest_formula)
+```
+
+## Simple Linear Regression
+`lm_mverse` will execute `lm` on each of the branches. It returns an `lm_mverse` object, and we can inspect the modeling results with `summary`. 
+
+```{r lm}
+# Create mverse object and add relevant branches 
+mv_lm <- create_multiverse(hurricane) %>% 
+  add_filter_branch(death_outliers, damage_outliers) %>% 
+  add_mutate_branch(femininity, damage) %>% 
+  add_formula_branch(formulas) %>%
+  lm_mverse()
+```
+`summary` is used to inspect the estimates, statistics, and p-values. Passing different keywords to `output` arguments will give different statistical values. 
+```{r lm_summary}
+# output estimates by default, or by "estimates" or "e"
+summary(mv_lm)
+# output degree of freedom by "df" 
+summary(mv_lm, output="df")
+# output f-statistic by "fstatistic" or "f"
+summary(mv_lm, output="f")
+# output R-squared by `r.squared` or "r"
+summary(mv_lm, output="r")
+```
+
+## Generalized Linear Regression
+`glm_mverse` will execute `glm` on each of the branches. It returns an `glm_mverse` object, and we can inspect the modeling results with `summary`. 
+```{r glm}
+# Create mverse object and add relevant branches 
+mv_glm <- create_multiverse(hurricane) %>% 
+  add_filter_branch(death_outliers, damage_outliers) %>% 
+  add_mutate_branch(femininity, damage) %>% 
+  add_formula_branch(formulas) %>%
+  add_family_branch(families) %>%
+  glm_mverse()
+```
+We can use `summary` to inspect the results as well. 
+
+```{r glm_summary}
+# output estimates by default, or by "estimates" or "e"
+summary(mv_glm)
+# output degree of freedom by "df" 
+summary(mv_glm, output="df")
+# output deviance by "deviance" or "de"
+summary(mv_glm, output="de")
+# output AIC/BIC by `aic` or "bic"
+summary(mv_glm, output="AIC")
+```
+## Specification Curve
