started implement coxph_mverse
coxph_verse
summary.coxph_mverse
Havent done test and documenting

--- a/vignettes/getting-start.Rmd
+++ b/vignettes/getting-start.Rmd
@@ -78,6 +78,7 @@ The typical workflow of multiverse analysis with `mverse` is
 # Loading packages
 ```{r load_package, warning=FALSE, message=FALSE}
 library(mverse)
+library(dplyr)
 ```
 
 # Data
@@ -176,7 +177,8 @@ mv_ttest <- create_multiverse(hurricane) %>%
   add_mutate_branch(femininity, damage)
 
 # Execute t test
-knitr::kable(ttest_mverse(mv_ttest, 'MinPressure_before', 'Minpressure_Updated_2014'))
+ttest_mverse(mv_ttest, 'MinPressure_before', 'Minpressure_Updated_2014')
+# knitr::kable()
 ```
 
 Another usage for `ttest_mverse` is to work with `formula_branch`. The formula need to follow the <a href="https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/t.test">formula interface</a> of `t.test`.
@@ -261,3 +263,4 @@ knitr::kable(summary(mv_glm, output="de"))
 knitr::kable(summary(mv_glm, output="AIC"))
 ```
 ## Specification Curve
+
