--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,8 @@
 ---
-output: github_document
+output: 
+  bookdown::github_document2:
+    fig_caption: true
+    number_sections: false
 csl: american-statistical-association.csl
 references:
   - id: hurricane
@@ -127,9 +130,9 @@ You can install the development version from [GitHub](https://github.com/) with:
 devtools::install_github("mverseanalysis/mverse")
 ```
 
-## Example: Hurricane Names and Gender-based Expectations
+## Example: Did Gender-based Expectations Lead to More Deaths by _Female_ Hurricanes?
 
-This is an example demonstrating a full analysis using `mverse` using the `hurricane` dataset included in the package. The data set comes from a study by @hurricane and contains the following information about hurricanes that landed on the U.S. between 1950 and 2021:
+In this example, we examine whether naming hurricanes with female names lead to more deaths. A full multiverse analysis is illustrated with `mverse` using the `hurricane` dataset included in the package. The dataset comes from a study by @hurricane and contains the following information about hurricanes that landed on the U.S. between 1950 and 2021:
 
 +   _MasFem_: Femininity rating on hurricane names (1:very masculine; 11: very feminine)
 +   _alldeaths_: Total fatality counts
@@ -161,9 +164,9 @@ hurricane <- hurricane %>%
   mutate(nameyear = paste(Name, Year, sep = ", "))
 ```
 
-Inspecting the data reveals that 8 of the top 10 hurricanes that caused most fatalities had female names while only 6 of the top 10 hurricanes with the most financial damage had female names.
+Figure \@ref(fig:top10) shows top 10 lists for the deadliest and the most damaging hurricanes in the data. The lists reveal that there are more female names in the deadliest list than in the most damaging list. It is also noticeable that some of the deadliest _female_ hurricanes weren't among the most damaging - e.g., Audrey, Camille, and Agnes.
 
-```{r top10, fig.asp=9/16, dpi=144}
+```{r top10, fig.asp=9/16, dpi=144, fig.cap="_While Katrina is both the deadliest and the most damaging hurricane, the top 10 lists are not consistent with more_female hurricanes among the deadliest than the most damaging._"}
 topdeaths <- hurricane %>%
   mutate(nameyear = factor(nameyear, levels = nameyear[order(alldeaths)])) %>%
   arrange(-alldeaths) %>%
@@ -232,9 +235,9 @@ In `mverse`, such decision points are called _branches_ and the individual paths
 
 ### Options for Outliers
 
-In order to determine whether we examine the distributions of hurricane characteristics - fatality counts, financial damage amounts, maximum wind speed, and minimum pressure.
+In order to determine whether we examine the distributions of hurricane characteristics - fatality counts, financial damage amounts, maximum wind speeds, and minimum pressures. The distributions are illustrated in Figure \@ref(fig:dotplots).
 
-```{r dotplots, fig.asp=9/16, dpi=144}
+```{r dotplots, fig.asp=9/16, dpi=144, fig.cap="_The distributions of different measures of hurricane strengths suggest that some hurricanes had extraordinary strengths._"}
 p1 <- hurricane %>%
   ggplot(aes(x = alldeaths, fill = Name %in% (hurricane %>% arrange(-alldeaths) %>% slice(1:2) %>% pull(Name))))+
   theme_void() +
@@ -326,13 +329,13 @@ To control for the strength of a hurricane, we may use one of
 +   Maximum wind speed; and
 +   Minimum pressure
 
-from the data set. 
+from the dataset. 
 
 ### Multiverse Analysis in `mverse`
 
-We have 2 options for defining the outliers and 3 options for defining the hurricane strength. They lead to $2\times 3=6$ unique analysis paths, or _universes_, in total as illustrated below.
+We have 2 options for defining the outliers and 3 options for defining the hurricane strength. They lead to $2\times 3=6$ unique analysis paths, or _universes_, in total as illustrated Figure \@ref(fig:tree).
 
-```{r tree, message=FALSE, fig.asp=9/16, dpi=144}
+```{r tree, message=FALSE, fig.asp=9/16, dpi=144, fig.cap="_Having one branch with 2 options and another with 3 results in 2 x 3 = 6 universes in total._"}
 library(igraph)
 library(ggraph)
 hurricane_outliers <- filter_branch(
@@ -349,26 +352,42 @@ combs <- summary(mv) %>%
   select(hurricane_outliers_branch, hurricane_strength_branch)
 edges <- rbind(
   combs %>%
-    mutate(from = "0",
+    mutate(from = "Data",
            to = hurricane_outliers_branch) %>%
-    select(from, to) %>%
     distinct(from, to),
   combs %>%
     mutate(from = hurricane_outliers_branch,
            to = hurricane_strength_branch) %>%
-    select(from, to) %>%
-    distinct(from, to))
-tree <- graph_from_data_frame(edges)
-ggraph(tree, layout = 'dendrogram', circular = FALSE) +
-  geom_edge_diagonal(width = 1, color = "grey") +
-  geom_node_point(size = 4) +
-  geom_node_text(aes(label = name, color = name == "0"), 
-                 vjust = 2, show.legend = FALSE) +
-  scale_color_manual(values = c("black", "white")) +
+    distinct(from, to)) %>%
+  mutate(
+    branch =  factor(c(
+      "Filter Branch: Outliers", "Filter Branch: Outliers",
+      "Mutate Branch: Strength", "Mutate Branch: Strength", 
+      "Mutate Branch: Strength", "Mutate Branch: Strength", 
+      "Mutate Branch: Strength", "Mutate Branch: Strength"
+    )),
+    options = factor(c(1, 2, rep(1:3, 2)))
+  )
+froms <- unique(as.character(edges$from))
+tos <- unique(as.character(edges$to))
+nodes <- data.frame(
+  name = unique(c(froms, tos)),
+  branch = c("Filter Branch: Outliers", "Mutate Branch: Strength", "Mutate Branch: Strength", rep(NA, 3))
+)
+g <- graph_from_data_frame(edges, vertices = nodes)
+ggraph(g, layout = 'dendrogram', circular = FALSE) +
+  geom_edge_bend(aes(alpha = edge_attr(g, "options"), color = edge_attr(g, "branch")), width = 1, show.legend = FALSE) +
+  geom_node_point(aes(color = branch), size = 4) +
+  scale_color_discrete(name = NULL, labels = c(
+    "Filter Branch: Outliers", "Mutate Branch: Strength", "Universe"
+  )) +
+  geom_node_text(aes(label = name),
+                 vjust = -1.2, hjust = 1, nudge_y = -.05) +
   theme_void() +
   coord_flip() +
-  scale_y_reverse(expand = c(0, .5)) +
-  scale_x_continuous(expand = c(0, .5))
+  scale_y_reverse(expand = c(0, .6)) +
+  scale_x_continuous(expand = c(0, .5)) +
+  theme(legend.position = "left")
 ```
 
 Below is a short demonstration on how we can perform the multiverse analysis using `mverse`. See `vignette("hurricane")` for a detailed case study using the same data.
@@ -402,14 +421,16 @@ mv <- mv %>%
   add_mutate_branch(hurricane_strength)
 ```
 
-To specify the Poisson regression model, we need the formula and the probability distribution. We can specify the formula using `formula_branch()` and the probability distribution using `family_branch()`. For simplicity, we only consider a single option for each in this example, but defining multiple options are also possible.
+`mverse` package provides a `glm_mverse()` method for multiplexing `stats::glm()` across `mverse` objects. To specify a Poisson model, we need to pass `formula` for specifying the model structure and `family` for specifying the model distribution to `stats::glm()`. To pass the specifications across the multiverse, we first define them as appropriate branches and add to the `mverse` object. 
+
+Note that we only have a single option for the branches. While they do not result in any "branching", they are defined with `formula_branch()` and `family_branch()` as the steps are required for `glm_mverse()`.
 
 ```{r echo=TRUE}
 model <- formula_branch(alldeaths ~ hurricane_strength * MasFem)
 distribution <- family_branch(poisson)
 ```
 
-Similar to the previous branches, we add them to the `mverse` object using `add_formula_branch()` and `add_family_branch()`.
+We then add them to the `mverse` object using `add_formula_branch()` and `add_family_branch()`. 
 
 ```{r echo=TRUE}
 mv <- mv %>%
@@ -417,11 +438,10 @@ mv <- mv %>%
   add_family_branch(distribution)
 ```
 
-Finally, we fit the generalized linear model by calling `glm_mverse()`. The method runs R's `glm` method across the multiverse. 
+Finally, we fit the generalized linear model by calling `glm_mverse()`. 
 
 ```{r echo=TRUE}
-mv <- mv %>%
-  glm_mverse() 
+mv <- mv %>% glm_mverse() 
 ```
 
 
@@ -443,13 +463,13 @@ res %>%
   select(hurricane_outliers_branch, hurricane_strength_branch, estimate, conf.low, conf.high)
 ```
 
-We can also inspect the result graphically using `spec_curve()`. The method builds a specification curve [@speccurve] for a term in the regression model specified by `var`.
+We can also inspect the result graphically using `spec_curve()`. The method builds a specification curve [@speccurve] for a term in the regression model specified by `var`. The method also allows multiple ways of sorting the estimates. See `?spec_curve` for details.
 
-```{r dpi=144}
+```{r echo=TRUE, dpi=144}
 spec_curve(mv, var = "MasFem")
 ```
 
-The method also allows multiple ways of sorting the estimates. See `?spec_curve` for details.
+The specification curve shows that a Poisson model found a significant relationship between the femininity of a hurricane's name and its fatality counts in 4 out of 6 universes. However, given that the 2 universes with insignificant results both used a hurricane's minimum pressure as the strength variable suggests that the result is not robust to the branch. See `vignette("hurricane")` for a full case study with more branches considered.
 
 
 ## References
